@@ -5,6 +5,7 @@ Changes to 1.0.27
 * Closing window acts exactly like the quit button/menu item
 * Current program is marked with larger font instead of bold, since that
   doesn't work with all themes.
+* Improve performance of surface plots, and get rid of flicker
 * Remove menu icons
 * Leave the Stop button on the plot window enabled if a script is running
 
